api v1 avec fonctionnalités